force-app/main/default/objects/Payable__c/Payable__c.object-meta.xml
<CustomObject>
    <description>The Doctor or their LLC entity receiving the payment</description>
    <label>Payable</label>
    <nameField>
        <label>Payable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>