force-app/main/default/objects/Payable__c/fields/Timesheet_Reference__c.field-meta.xml
<CustomField>
    <fullName>Timesheet_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Custom field directly linking the PO to the approved timesheet that generated it.</description>
    <label>Timesheet Reference</label>
    <referenceTo>Timesheet__c</referenceTo>
    <relationshipLabel>Payables</relationshipLabel>
    <relationshipName>Payables</relationshipName>
    <type>Lookup</type>
</CustomField>