force-app/main/default/objects/Payable__c/fields/Total_Payable__c.field-meta.xml
<CustomField>
    <fullName>Total_Payable__c</fullName>
    <description>Sum of gross wages across all associated pay lines.</description>
    <label>Total Payable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>